--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul style="list-style-type: none; margin: 0; padding: 0;">
         <li style="padding: 0.5% 0% 0.5% 0; width:25%; background: #31384a; float: left;"><a href="https://isaiah-c-alt.github.io/Personal_Site-/">Home</a></li>
         <li style="padding: 0.5% 0% 0.5% 0; width:25%; background: #31384a; float: left;"><a href="https://isaiah-c-alt.github.io/Personal_Site_Resume/">Resume</a></li>
-        <li style="padding: 0.5% 0% 0.5% 0; width:25%; background: #31384a; float: left;"><a href="">Contact</a></li>
+        <li style="padding: 0.5% 0% 0.5% 0; width:25%; background: #31384a; float: left;"><a href="https://isaiah-c-alt.github.io/Personal_Site_Contact/">Contact</a></li>
         <li style="padding: 0.5% 0% 0.5% 0; width:25%; background: #31384a; float: left;"><a href="https://www.google.com/">Google</a></li>
       </ul>
     </div>
